# amneziawg-android

tunnel/: build.gradle.kts
tunnel/src/main/java/org/amnezia/awg/backend/: GoBackend.java
tunnel/tools/: CMakeLists.txt
tunnel/tools/libwg-go/: Makefile
